Task 3 done, needs refactoring and optimizing.