@@ -35,9 +35,8 @@ public class Main {
                 new Employee("Jurgen",  "Hansen",   MALE,    "FrontEnd",     500_000)
         );
 
-
-
         System.out.println("[INITIAL LIST] - \n" + employeeList + "\n");
+
 
         // Task a - List of lastNames
         var ans_list = employeeList.stream()
@@ -67,6 +66,7 @@ public class Main {
 
         // Task d - Give all "Bosses" a 7% raise. Print the list after
         employeeList.stream()
+                // TODO: Comment forEach
                 .filter(employee -> employee.getPosition().equalsIgnoreCase("Boss"))
                 .forEach(employee -> employee.setSalary( (int) (employee.getSalary() * 1.07)));
                 System.out.format("[TASK D] - The list of employees after [Boss] has received a %d percent increase in salary:\n", PERCENTAGE_INCREASE);
@@ -75,6 +75,7 @@ public class Main {
 
         // Task e - Return boolean if anyone has a salary greater than 800_000
         var greaterThanSalary = employeeList.stream()
+                // TODO: Comment anyMatch
              // .map(salary -> employee.getSalary())
                 .map(Employee::getSalary)
                 .anyMatch(salary -> salary > 800_000);
@@ -82,29 +83,62 @@ public class Main {
 
 
         // Task f - Print the employee list with System.out.println() without using a loop
-        //System.out.println("[TASK F] - \n" + employeeList);
-        System.out.println("[TASK F2] - ");
+        System.out.println("[TASK F] - Printed using a pre-created toString() method in the Employee-class \n" + employeeList);
+
+        System.out.println("[TASK F cont.] - Printed using a stream with a .forEach call \n");
         employeeList.stream()
                 .forEach(System.out::println);
                 System.out.println();
+
+
         // Task g - Find the employee(s) with the lowest salary
-        var numLowSalary = employeeList.stream()
-                        .min(Comparator.comparingInt(Employee::getSalary))
-                        .get().getSalary();
-                        System.out.println("[TASK G] - "+ numLowSalary);
+        var employeeLowSalary = employeeList.stream()
+                // TODO: Comment comparator
+                .min(Comparator.comparingInt(Employee::getSalary));
+                System.out.println("[TASK G] - The lowest salary of all employees is: \n"+ employeeLowSalary + "\n");
 
         var employeesWithLowestSalary = employeeList.stream()
-                        .filter(e -> e.getSalary() == numLowSalary)
-                        .collect(Collectors.toList());
-                        System.out.println("[TASK G] - "+ numLowSalary);
+                // TODO: Comment .get(), toList()
+                .filter(e -> e.getSalary() == employeeLowSalary.get().getSalary())
+                .toList();
+                System.out.println("[TASK G cont.] - The employees sharing the lowest salary is: \n" + employeesWithLowestSalary + "\n");
 
 
-        // Task h - Find the sum of all whole numbers [1 < 1000] divisible by 3 || 5
+        // Task h - Find the sum of all whole numbers [1 <= 1000] divisible by 3 || 5
+        int[] numList = IntStream.rangeClosed(1, 1000).toArray();
+        // TODO: Comment Intstream . justification for toArray()
 
+        int sum_3 = Arrays.stream(numList)
+                // TODO: Comment Arrays.stream(array[])
+                .filter(i -> i % 3 == 0)
+                .sum();
 
+        int sum_5 = Arrays.stream(numList)
+                .filter(i -> i % 5 == 0)
+                .sum();
+
+        int sum_3_5 = Arrays.stream(numList)
+                .filter(i -> i % 3 == 0)
+                .filter(i -> i % 5 == 0)
+                .sum();
+
+        var sumDivisible = (sum_3 + sum_5) - sum_3_5;
+        System.out.println("The sum of numbers between [1, ... 1000] divisible by 3 or 5 is: " + sumDivisible);
+
+        System.out.println(check());;
     }
 
+    private static int check() {
+        // TODO: REMOVE
+        int sum = 0;
+        for (int i = 1; i <= 1000; i++) {
 
+            if (i % 5 == 0 || i % 3 == 0 || (i % 5 == 0 || i % 3 == 0)) {
+                sum += i;
+            }
+        }
+        return sum;
+    }
 
     private static void printAll(List<Employee> employeeList) {
         /*
